@@ -1,4 +1,8 @@
 Changes with APR a9
+  *) Check more carefully for getaddrinfo().  Accept those that
+     require <netdb.h> to be included (e.g., Tru64).  Reject those that 
+     fail a very basic operational test (e.g., AIX).  [Jeff Trawick]
+
   *) Add apr_make_os_sock() for constructing a fully-capable APR
      socket.  [Jeff Trawick]
 
